Some intial updates based on stake calculator released today

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -252,13 +252,13 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Your return on stake grows with us
+                                        More returns for delegators as we grow
                                         <ul style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
-                                            <li>5M-10M staked => 4.3% fees</li>
-                                            <li>10-20M staked => 4.0% fees</li>
-                                            <li>20-40M staked => 3.5% fees</li>
-                                            <li>40-80M staked => 2.8% fees</li>
-                                            <li>80M-Saturation=> 1.9% fees</li>
+                                            <li>8M-16M   staked => 3.6% fees</li>
+                                            <li>16-32M   staked => 3.2% fees</li>
+                                            <li>32-64M   staked => 2.8% fees</li>
+                                            <li>64-128M  staked => 2.4% fees</li>
+                                            <li>128M-saturation => 2.0% fees</li>
                                         </ul>
                                     </li>
                                     <li>Lowest fixed fees as required by the protocol - 228 ₳/epoch at the
