Added low-res logo to see how it looks. Minor tweaks and change to the content

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -35,6 +35,7 @@
                                     (f _,/'
                                      "'
                                       -->
+
 <head>
     <title>SafeStak - Premium Stake Pool securing the Cardano Blockchain</title>
     <meta charset="UTF-8">
@@ -54,16 +55,19 @@
             color: #EEE;
             font-size: 34px;
             letter-spacing: 2px;
-            font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica Neue,sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Helvetica Neue, sans-serif;
             margin: 0;
             text-transform: none;
+        }
+
+        h4 {
+            padding: 0px 0 13px;
         }
 
         dt {
             display: inline-block;
             color: #EEE;
-            font-size: 0.7em;
-            font-weight: bold;
+            font-size: 0.8em;
             text-transform: uppercase;
             padding: 10px 0 5px;
         }
@@ -71,8 +75,9 @@
         dd {
             display: inline-block;
             color: rgb(255, 118, 118);
+            font-size: 1.2em;
             padding: 0;
-            margin: 0 3px;
+            margin: 3px;
         }
 
         ul {
@@ -120,7 +125,7 @@
             max-width: 1140px;
             margin: auto;
             color: #BBB;
-            background: #173b69;
+            background: #005C85;
             padding: 20px 10px;
             text-align: right;
         }
@@ -135,11 +140,11 @@
         }
 
         header .navbar {
-            background: #173b69;
+            background: #005C85;
         }
 
         #banner {
-            background: #173b69;
+            background: #005C85;
         }
 
         .footer-links {
@@ -161,7 +166,7 @@
             <div class="container">
 
                 <a class="navbar-brand" href="/">
-                    <h1 class="logo">🔒<span style='color:rgb(255, 118, 118)'>{</span>SAFE<span style='color:rgb(255, 118, 118)'>}</span>stak</h1>
+                    <img src='logo-small.png' alt='{SAFE}stak' width='230px' />
                 </a>
 
                 <button class="navbar-toggler navbar-dark custom-toggler" type="button" data-toggle="collapse"
@@ -190,20 +195,19 @@
                     <div class="col-md-6 col-lg-6">
                         <div class="banner_text forResBannerText">
                             <h1 class="banner_title">
-                                Your <img style='width:32px; height: 32px;' src='adacoin.png' alt="₳" /> in safe
+                                Your <img style='width:50px; height: 50px;' src='adacoin.png' alt="₳" /> in safe
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                Rest easy while investing in a fairer future. Our dependable and resilient cloud infrastructure give stakeholders
-                                exceptional return on stake, all while reliably powering and fortifying <a
-                                    href='https://www.cardano.org/ouroboros/' target='_blank'
-                                    style='color:#EEE'>Cardano's game-changing blockchain network</a>
+                                Rest easy while investing in Cardano's vision for the future. Our highly specced and closely-monitored secure foundations give stakeholders
+                                exceptional return on stake, all while reliably powering and fortifying 
+                                <a href='https://www.cardano.org/ouroboros/' target='_blank' style='color:#EEE'>the world's most advanced blockchain network</a>
                             </p>
                             <dl class="pool-details">
                                 <dt>Ticker</dt>
                                 <dd>SAFE</dd>
-                                <dt>Margin</dt>
-                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>1.9% - 4.4%</a></dd>
+                                <dt>Fees</dt>
+                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>1.4% - 3.0%</a></dd>
                                 <dt>Pledge</dt>
                                 <dd>500,000 ₳</dd>
                             </dl>
@@ -252,19 +256,20 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        More returns for delegators as we grow
-                                        <ul style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
-                                            <li>8M-16M   staked => 3.6% fees</li>
-                                            <li>16-32M   staked => 3.2% fees</li>
-                                            <li>32-64M   staked => 2.8% fees</li>
-                                            <li>64-128M  staked => 2.4% fees</li>
-                                            <li>128M-saturation => 2.0% fees</li>
+                                        Our growth guarantees <strong>more returns</strong>
+                                        <ul
+                                            style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
+                                            <li>1M-16M staked => 3.0% fees</li>
+                                            <li>16-32M staked => 2.7% fees</li>
+                                            <li>32-64M staked => 2.4% fees</li>
+                                            <li>64-128M staked => 2.1% fees</li>
+                                            <li>128M-saturation => 1.8% fees</li>
                                         </ul>
                                     </li>
                                     <li>Lowest fixed fees as required by the protocol - 228 ₳/epoch at the
                                         time of writing</li>
-                                    <li>Competitive perfectionists at heart, we're continuously optimising our whole stack for generating blocks. 
-                                        Key metrics are monitored and regularly benchmarked against our peers to stay ahead of the pack</li>
+                                    <li>As competitive perfectionists we're continuously optimising our whole stack to
+                                        increase rewards for our delegators</li>
                                 </ul>
                             </div>
                         </div>
@@ -288,14 +293,12 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        <strong>All</strong> our rewards go back into increasing our pledge. We are in
-                                        it for the long haul baby!
+                                        <strong>All</strong> our rewards go back into increasing our pledge
                                     </li>
-                                    <li>Transparency, openness and fairness are our core ideals. We have <a
+                                    <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack to help others in Cardano community</li>
-                                    <li>Our life savings (and more) fund our pledge and the administrative costs of this
-                                        pool for maximum skin in the game</li>
+                                    <li>We have put <strong>everything</strong> into funding our pledge for maximum skin in the game</li>
                                 </ul>
                             </div>
                         </div>
@@ -319,13 +322,13 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        30+ years of combined experience in the largest technology and e-commerce
+                                        <strong>30+ years</strong> of combined experience in the largest technology and e-commerce
                                         powerhouses in the world
                                     </li>
-                                    <li>Airtight security verified by multiple certified cyber security professionals
+                                    <li><strong>Airtight security</strong> verified by multiple certified cyber security professionals
                                     </li>
                                     <li>Proven track-record in designing, implementing and supporting highly
-                                        available, low latency distributed systems at scale. Ask us for our creds!</li>
+                                        available, low latency distributed systems at scale. <a href='mailto:safestak@pm.me'>Ask us</a> for our creds!</li>
                                 </ul>
                             </div>
                         </div>
@@ -351,7 +354,7 @@
                                             <th>Most other pools</th>
                                         </tr>
                                         <tr>
-                                            <td>Margin Reduction As Pool Grows</td>
+                                            <td>Lower Fees As Pool Grows</td>
                                             <td><i class="fa fa-check  text-success"></i></td>
                                             <td><i class="fa fa-times "></i></td>
                                         </tr>
@@ -415,7 +418,8 @@
                                 No, there is zero risk of losing ADA when you delegate to us through supported
                                 wallets such as <a href='https://daedaluswallet.io/' target='_blank'>Daedalus</a> or <a
                                     href='https://yoroi-wallet.com/' target='_blank'>Yoroi</a>.
-                                In fact, you still have full custody to spend your delegated ADA as the delegation process
+                                In fact, you still have full custody to spend your delegated ADA as the delegation
+                                process
                                 does not
                                 "lock" the ADA up in a strict sense, it will only impact your extra rewards over that
                                 epoch.
@@ -431,7 +435,8 @@
                                 maintaining our
                                 stake pool, we are planning an in-depth tutorial (perhaps with a video) once we are
                                 happy with the way our stake pool is running. Time is a such a fickle beast!
-                                If you have a significant holding of ADA and would like us to manage/operate a pool for you please <a href='mailto:safestak@pm.me'>contact us</a>.
+                                If you have a significant holding of ADA and would like us to manage/operate a pool for
+                                you please <a href='mailto:safestak@pm.me'>contact us</a>.
                             </p>
                         </div>
                     </div>
