Slight content change

--- a/concept/concept.html
+++ b/concept/concept.html
@@ -297,7 +297,7 @@
                                     </li>
                                     <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
-                                        our entire tech-stack to help others in Cardano community</li>
+                                        our entire tech-stack</li>
                                     <li>We have put <strong>everything</strong> into funding our pledge for maximum skin in the game</li>
                                 </ul>
                             </div>
