--- a/concept/concept.html
+++ b/concept/concept.html
@@ -61,7 +61,7 @@
         }
 
         h4 {
-            padding: 0px 0 13px;
+            padding: 13px 0;
         }
 
         dt {
@@ -87,7 +87,12 @@
         }
 
         footer {
-            background: #173b69;
+            background: #005C85;
+        }
+
+        .navbar-brand img {
+            width:250px;
+            height:auto;
         }
 
         .circle_banner {
@@ -147,6 +152,10 @@
             background: #005C85;
         }
 
+        section.feature {
+            background: #005C85;
+        }
+
         .footer-links {
             float: right;
         }
@@ -199,7 +208,7 @@
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                Rest easy while investing in Cardano's vision for the future. Our highly specced and closely-monitored secure foundations give stakeholders
+                                Rest easy while investing in Cardano's vision for the future. Our highly specced and closely-monitored secure foundations give delegators
                                 exceptional return on stake, all while reliably powering and fortifying 
                                 <a href='https://www.cardano.org/ouroboros/' target='_blank' style='color:#EEE'>the world's most advanced blockchain network</a>
                             </p>
@@ -207,7 +216,7 @@
                                 <dt>Ticker</dt>
                                 <dd>SAFE</dd>
                                 <dt>Fees</dt>
-                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>1.4% - 3.0%</a></dd>
+                                <dd><a href='#rewards' style='color:rgb(255, 118, 118)'>1.8% - 3.0%</a></dd>
                                 <dt>Pledge</dt>
                                 <dd>500,000 ₳</dd>
                             </dl>
@@ -259,10 +268,10 @@
                                         Our growth guarantees <strong>more returns</strong>
                                         <ul
                                             style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
-                                            <li>1M-16M staked => 3.0% fees</li>
-                                            <li>16-32M staked => 2.7% fees</li>
-                                            <li>32-64M staked => 2.4% fees</li>
-                                            <li>64-128M staked => 2.1% fees</li>
+                                            <li>1M-16M staked   => 3.0% fees</li>
+                                            <li>16-32M staked   => 2.7% fees</li>
+                                            <li>32-64M staked   => 2.4% fees</li>
+                                            <li>64-128M staked  => 2.1% fees</li>
                                             <li>128M-saturation => 1.8% fees</li>
                                         </ul>
                                     </li>
@@ -293,12 +302,13 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        <strong>All</strong> our rewards go back into increasing our pledge
+                                        <strong>All</strong> our rewards go back into increasing our pledge. 
+                                        A token of our long-term commitment to this project while boosting return on stake for our delegators
                                     </li>
+                                    <li>We have put everything into funding our pledge for maximum skin in the game</li>
                                     <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack</li>
-                                    <li>We have put <strong>everything</strong> into funding our pledge for maximum skin in the game</li>
                                 </ul>
                             </div>
                         </div>
@@ -435,8 +445,8 @@
                                 maintaining our
                                 stake pool, we are planning an in-depth tutorial (perhaps with a video) once we are
                                 happy with the way our stake pool is running. Time is a such a fickle beast!
-                                If you have a significant holding of ADA and would like us to manage/operate a pool for
-                                you please <a href='mailto:safestak@pm.me'>contact us</a>.
+                                If you have a holding of ADA and would like us to manage/operate a pool for
+                                you please feel free to <a href='mailto:safestak@pm.me'>contact us</a>.
                             </p>
                         </div>
                     </div>
