--- a/concept/concept.html
+++ b/concept/concept.html
@@ -208,8 +208,9 @@
                                 hands
                             </h1>
                             <p class="banner_sub_head mb-4 mt-4">
-                                Rest easy while investing in Cardano's vision for the future. Our highly specced and closely-monitored secure foundations give delegators
-                                exceptional return on stake, all while reliably powering and fortifying 
+                                Rest easy while investing in Cardano's vision for the future. 
+                                Our highly specced, secure and closely-monitored stake pool give delegators
+                                peace-of-mind with solid returns on stake while fortifying 
                                 <a href='https://www.cardano.org/ouroboros/' target='_blank' style='color:#EEE'>the world's most advanced blockchain network</a>
                             </p>
                             <dl class="pool-details">
@@ -268,10 +269,10 @@
                                         Our growth guarantees <strong>more returns</strong>
                                         <ul
                                             style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
-                                            <li>1M-16M staked   => 3.0% fees</li>
-                                            <li>16-32M staked   => 2.7% fees</li>
-                                            <li>32-64M staked   => 2.4% fees</li>
-                                            <li>64-128M staked  => 2.1% fees</li>
+                                            <li>1M-16M staked &nbsp;&nbsp;=> 3.0% fees</li>
+                                            <li>16-32M staked &nbsp;&nbsp;=> 2.7% fees</li>
+                                            <li>32-64M staked &nbsp;&nbsp;=> 2.4% fees</li>
+                                            <li>64-128M staked &nbsp;=> 2.1% fees</li>
                                             <li>128M-saturation => 1.8% fees</li>
                                         </ul>
                                     </li>
@@ -303,9 +304,9 @@
                                 <ul>
                                     <li>
                                         <strong>All</strong> our rewards go back into increasing our pledge. 
-                                        A token of our long-term commitment to this project while boosting return on stake for our delegators
+                                        A token of our long-term commitment to this project while boosting rewards for delegators
                                     </li>
-                                    <li>We have put everything into funding our pledge for maximum skin in the game</li>
+                                    <li>We have put absolutely everything into funding our pledge for maximum skin in the game</li>
                                     <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack</li>
@@ -337,7 +338,7 @@
                                     </li>
                                     <li><strong>Airtight security</strong> verified by multiple certified cyber security professionals
                                     </li>
-                                    <li>Proven track-record in designing, implementing and supporting highly
+                                    <li><strong>Proven track-record</strong> in designing, implementing and supporting highly
                                         available, low latency distributed systems at scale. <a href='mailto:safestak@pm.me'>Ask us</a> for our creds!</li>
                                 </ul>
                             </div>
