--- a/concept/concept.html
+++ b/concept/concept.html
@@ -266,7 +266,7 @@
                             <div class="debt-content">
                                 <ul>
                                     <li>
-                                        Our growth guarantees <strong>more returns</strong>
+                                        Our growth guarantees even <strong>more returns</strong>
                                         <ul
                                             style='padding:5px 20px 0;font-family:Consolas, monaco, monospace; font-size:0.8em;'>
                                             <li>1M-16M staked &nbsp;&nbsp;=> 3.0% fees</li>
@@ -276,10 +276,10 @@
                                             <li>128M-saturation => 1.8% fees</li>
                                         </ul>
                                     </li>
-                                    <li>Lowest fixed fees as required by the protocol - 228 ₳/epoch at the
+                                    <li><strong>Lowest fixed fees</strong> as required by the protocol - 228 ₳/epoch at the
                                         time of writing</li>
-                                    <li>As competitive perfectionists we're continuously optimising our whole stack to
-                                        increase rewards for our delegators</li>
+                                    <li>As competitive perfectionists we're <strong>continuously optimising</strong> our whole stack to
+                                        increase block production and up-time</li>
                                 </ul>
                             </div>
                         </div>
@@ -304,9 +304,9 @@
                                 <ul>
                                     <li>
                                         <strong>All</strong> our rewards go back into increasing our pledge. 
-                                        A token of our long-term commitment to this project while boosting rewards for delegators
+                                        A token of our long-term commitment to this project while also boosting rewards for delegators
                                     </li>
-                                    <li>We have put absolutely everything into funding our pledge for maximum skin in the game</li>
+                                    <li>We have put absolutely everything into funding our pledge for <strong>maximum skin in the game</strong></li>
                                     <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack</li>
@@ -444,7 +444,7 @@
                                 Although we have <a href='https://www.github.com/SafeStak'
                                     target='_blank'>open-sourced</a> all our underlying resources for creating and
                                 maintaining our
-                                stake pool, we are planning an in-depth tutorial (perhaps with a video) once we are
+                                stake pool, we are further planning an in-depth tutorial (perhaps with a video) once we are
                                 happy with the way our stake pool is running. Time is a such a fickle beast!
                                 If you have a holding of ADA and would like us to manage/operate a pool for
                                 you please feel free to <a href='mailto:safestak@pm.me'>contact us</a>.
