--- a/concept/concept.html
+++ b/concept/concept.html
@@ -306,7 +306,7 @@
                                         <strong>All</strong> our rewards go back into increasing our pledge. 
                                         A token of our long-term commitment to this project while also boosting rewards for delegators
                                     </li>
-                                    <li>We have put absolutely everything into funding our pledge for <strong>maximum skin in the game</strong></li>
+                                    <li>We are <strong>fully invested</strong> in making this the best option for your ADA</li>
                                     <li><strong>Transparency</strong>, <strong>openness</strong> and <strong>fairness</strong> are our core ideals. We are active in the community and have <a
                                             href='https://www.github.com/SafeStak' target='_blank'>open-sourced</a>
                                         our entire tech-stack</li>
