--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <body>
     <header>
-        <h1 class="logo">{SAFE}stak</h1>
+        <img src='safestak-logo-small.png' alt='{SAFE}STAK' />
     </header>
     <main>
         <section class="hero">
