Updated metadata JSON again

--- a/testnets.html
+++ b/testnets.html
@@ -233,8 +233,8 @@
                                     </td>
                                     <td>
                                         <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-config.json'>config</a>
-                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-byron-genesis.json'>genesis</a>
-                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-shelley-genesis.json'>genesis</a>
+                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-byron-genesis.json'>sgenesis</a>
+                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-shelley-genesis.json'>bgenesis</a>
                                         <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate-topology.json'>topology</a>
                                     </td>
                                     <td>
@@ -253,8 +253,8 @@
                                     </td>
                                     <td>
                                         <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-config.json'>config</a>
-                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-byron-genesis.json'>genesis</a>
-                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-shelley-genesis.json'>genesis</a>
+                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-byron-genesis.json'>bgenesis</a>
+                                        <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-shelley-genesis.json'>sgenesis</a>
                                         <a href='https://hydra.iohk.io/build/3596468/download/1/mainnet_candidate_3-topology.json'>topology</a>
                                     </td>
                                     <td>
@@ -262,6 +262,26 @@
                                     </td>
                                     <td>
                                         Byron and Shelley mode - funds available from snapshot
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        mainnet_candidate_4
+                                    </td>
+                                    <td>
+                                        1.18.0 (release/1.18.x)
+                                    </td>
+                                    <td>
+                                        <a href='https://hydra.iohk.io/build/3624229/download/1/mainnet_candidate_4-config.json'>config</a>
+                                        <a href='https://hydra.iohk.io/build/3624229/download/1/mainnet_candidate_4-byron-genesis.json'>bgenesis</a>
+                                        <a href='https://hydra.iohk.io/build/3624229/download/1/mainnet_candidate_4-shelley-genesis.json'>sgenesis</a>
+                                        <a href='https://hydra.iohk.io/build/3624229/download/1/mainnet_candidate_4-topology.json'>topology</a>
+                                    </td>
+                                    <td>
+                                        DAEDALUS1.6.0-STN4
+                                    </td>
+                                    <td>
+                                        Byron and Shelley mode - funds available from snapshot and <a href="https://faucet.mainnet-candidate-4.dev.cardano.org/send-money/YOURADDRESS?apiKey=YOURAPIKEY">faucet</a>
                                     </td>
                                 </tr>
                             </table>
